Implement bridge network mode for jobs (#2191)
Allows running multiple containers per host

shim:

* Add `network_mode`: `host`|`bridge` to submit request
* Extract port mapping in `bridge` mode, expose via API as `ports`
* Add `--runner-ssh-port` (see below about hardcoded ports)
* Allow terminated->terminatad transition (fixes server flood in logs)

server:

* Add `JobRuntimeData` structure holding various runtime-specific job info
  (resource shares, network mode, port mapping)
* Use port mapping retrieved from shim to access runner from server
  and services from gateway
* ShimClient: implement v2 API, drop v1-over-v2 API emulation
* Replace hardcoded numeric ports with constants, deliver port settings
  to shim via `shim.env` file (don't rely on defaults in Go codebase)

Part-of: https://github.com/dstackai/dstack/issues/1780
