# runner/internal/shim/api/schemas.go
@@ -12,10 +12,11 @@ type TaskListResponse struct {
 }
 
 type TaskInfoResponse struct {
-	ID                 string          `json:"id"`
-	Status             shim.TaskStatus `json:"status"`
-	TerminationReason  string          `json:"termination_reason"`
-	TerminationMessage string          `json:"termination_message"`
+	ID                 string             `json:"id"`
+	Status             shim.TaskStatus    `json:"status"`
+	TerminationReason  string             `json:"termination_reason"`
+	TerminationMessage string             `json:"termination_message"`
+	Ports              []shim.PortMapping `json:"ports"`
 	// The following fields are for debugging only, server doesn't need them
 	ContainerName string   `json:"container_name"`
 	ContainerID   string   `json:"container_id"`
